# cryptomator-rust

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  LICENSE  Makefile  PLAN.md  README.md
.cargo/: config
.github/workflows/: ci.yml
benches/: bench.rs
kek/: masterkey.cryptomator
kek/d/B7/ODF4GFFYOAHPOWJW5DPNNAJSKU4N47/: k9zZ-ZY3G-vs6xQfduhSorAw23rmH0qGXQ==.c9r  oJz1qX-eR7UsZYh49KoZ2ZL3aOOfMeOfTT7n.c9r  q648vbshpMt75WYth8O5RsGYY3RSSRPy6A==.c9r
src/: error.rs  lib.rs  logging.rs  main.rs  operations.rs
src/crypto/: common.rs  cryptor.rs  error.rs  masterkey.rs  mod.rs  vault.rs
src/cryptofs/: common.rs  cryptofs.rs  error.rs  filesystem.rs  fs.rs  mod.rs
src/filesystem/: fs.rs  mod.rs
src/frontends/: auth.rs  fuse.rs  mod.rs  mount.rs  nfs.rs  webdav.rs
src/masterkey/: masterkey.rs  mod.rs
src/providers/: dropbox.rs  local_fs.rs  localfs.rs  mem_fs.rs  mod.rs  s3.rs  s3_fs.rs  webdav_fs.rs
tests/: cryptofs.rs  cryptor.rs  local_fs.rs  masterkey.rs  nfs_test.rs  s3_fs_integration.rs  webdav_frontend_test.rs  webdav_fs.rs  webdav_provider_fs_test.rs  webdav_provider_integration.rs  webdav_test.rs
tests/test_storage/: masterkey.cryptomator  vault.cryptomator
tests/test_storage/d/HI/RW3L6XRAPFC2UCK5QY37Q2U552IRPE/: AjCT3gDsE7VmMndVtlPV0cJazmD-CjEadg==.c9r  T1Zl8LYTFa339g4v_cO3-BCGAH7NfS9qLoLH.c9r  eZdOa_B9fRqncpYjZmKXfJEz81LgRUbT0yWdE0wyNTMd.c9r  fXQEfw6iSwP1esHbRznuVFZqv_LQFqNwC2r2LOQa-A==.c9r  gBmHXW5KGoOJ2UgC-a9JbhdBiyTQJdRmmjEwm2nCDwmXuCnknFK1UYz_.c9r  lZ7TQcpzWzXnHu9yEn0JOdiHxpvJHDR9iWNBOAqp9w==.c9r
tests/test_storage/d/HI/RW3L6XRAPFC2UCK5QY37Q2U552IRPE/b-woFQ2Mkg3hqOO0VcR4JBlkO4AyQOXIbQHX.c9r/: dir.c9r
tests/test_storage/d/J2/4DJMWWBBN3YAYHPVVUTJAWCZJHSII4/: _7Mjam6UhcY7xlu8CLYzvb5QpOGNURs=.c9r  fOPnoq_rJjTPk3RavIa4wJkPyhdoBUr_Xw==.c9r
tests/test_storage/d/XS/YLMHJ6LMARCCMAGDCQSUBQPRTTWYF6/: IWV9PdwkkCX4c9uAY2ullsHp022hk9IipSI=.c9r  NNLJtrXtdTFJuq2J8pPz-V49KpF2Mylncw==.c9r  PsnBhyXGe4m04LM6LvfjzfF_ahQCY2dHCPpkqg==.c9r  h_QesTqfC96gdxOZMpUOLlhgj9kw6VGocQ==.c9r  hc0UDA9kRcw0gGCBL1Dvtfd81BVoR_o=.c9r  p1eZada9NfjF2agsmhigu5mvUxkzmakVHd1n.c9r
tests/test_storage/d/XS/YLMHJ6LMARCCMAGDCQSUBQPRTTWYF6/DhXlGwI6vkmE23x1tQWCE2c_4OmtygZ-oCjICfBpL2dWrA==.c9r/: dir.c9r
