[package]
name = "cryptomator"
version = "0.1.0"
authors = ["pr0n00gler <pr0n00gler@yandex.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
failure = "0.1"
base64 = "0.13.0"
base32 = "0.4.0"
scrypt = { version = "0.2", default-features = false }
openssl = { version = "0.10"}
aes-siv = "0.5.0"
aes-ctr = "0.6.0"
hmac = "0.10.1"
sha2 = { version = "0.9.3", features = ["asm"] }
byteorder = "1"
sha-1 = { version = "0.9.4", features = ["asm"] }
rand = "0.7.3"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
rsfs = { git = "https://github.com/pr0n00gler/rsfs" }
webdav-handler = { git = "https://github.com/pr0n00gler/webdav-handler-rs", branch = "win"}
futures = "0.3.12"
http = "0.1.17"
hyper = { version = "0.14.2", features = [ "http1", "http2", "server", "stream", "runtime" ] }
tokio = { version = "1.0.2", features = ["full"] }
bytes = "1.0.1"
tracing = { git = "https://github.com/tokio-rs/tracing", rev = "0e8f920" }
tracing-appender = { git = "https://github.com/tokio-rs/tracing", rev = "0e8f920" }
tracing-futures = { git = "https://github.com/tokio-rs/tracing", rev = "0e8f920" }
tracing-subscriber = { git = "https://github.com/tokio-rs/tracing", features = ["json"], rev = "0e8f920" }
lru = "0.6.5"
time = { version = "0.1.43" }
clap = "3.0.0-beta.2"
rpassword = "5.0"
fs2 = "0.4.3"

[target.'cfg(unix)'.dependencies]
fuse = "0.3.1"
libc = "0.2.51"


[profile.release]
rpath = false
lto = true
overflow-checks = true
opt-level = 3
debug = false
debug-assertions = false
panic = "unwind"

[dev-dependencies]
criterion = {version = "0.3", features = ["html_reports"]}

[[bench]]
name = "bench"
harness = false
