[package]
name = "cryptomator"
version = "0.1.0"
authors = ["pr0n00gler <pr0n00gler@yandex.ru>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]

[dependencies]
anyhow = "1.0"
serde_json = "1.0.145"
serde = { version = "1.0.226", features = ["derive"] }
thiserror = "2.0.16"
base64 = "0.22.1"
base32 = "0.5.1"
scrypt = { version = "0.11", default-features = false, features = ["std"] }
openssl = { version = "0.10.73" }
aes-siv = "0.7.0"
aes = "0.8.4"
ctr = "0.9.2"
hmac = "0.12.1"
sha2 = { version = "0.10.9", features = ["asm"] }
sha1 = { version = "0.10.6", features = ["asm"] }
rand = "0.8.5"
uuid = { version = "1.18.1", features = ["serde", "v4"] }
rsfs = { git = "https://github.com/pr0n00gler/rsfs" }
dav-server = "0.11.0"
futures = "0.3.31"
hyper = { version = "1.5", features = ["http1", "http2", "server"] }
hyper-util = { version = "0.1", features = ["server-auto", "tokio"] }
tokio = { version = "1.47.0", features = ["full"] }
bytes = "1.10.1"
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.20", features = ["json", "env-filter"] }
lru-cache = "0.1.2"
clap = { version = "4.5.48", features = ["derive"] }
rpassword = "7.4.0"
fs2 = "0.4.3"
jwt = "0.16.0"
async-trait = "0.1.89"
nfsserve = "0.10.2"
subtle = "2.6.1"
zeroize = { version = "1.8", features = ["derive"] }
rust-s3 = { version = "0.37.1", default-features = false, features = ["sync-native-tls"] }
tempfile = "3.23.0"

[profile.release]
rpath = false
lto = true
overflow-checks = true
opt-level = 3
debug = false
debug-assertions = false
panic = "unwind"

[dev-dependencies]
criterion = { version = "0.7.0", features = ["html_reports"] }

[[bench]]
name = "bench"
harness = false
